--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.4",
+    "gh-pages": "^6.3.0",
     "vite": "^7.3.1",
     "vite-plugin-vue-devtools": "^8.0.6"
   },
