--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "deploy": "npm run build && gh-pages -d dist",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -20,4 +21,6 @@
   "engines": {
     "node": "^20.19.0 || >=22.12.0"
   }
+
+  
 }
